# code_advent

./: README.md
2015/: Cargo.toml  trace.txt
2015/problem_1/: Cargo.toml  README.md
2015/problem_1/src/: main.rs
2015/problem_10/: README.md
2015/problem_10/src/: main.rs
2015/problem_12/: Cargo.toml
2015/problem_12/src/: main.rs
2015/problem_2/: Cargo.toml
2015/problem_2/src/: main.rs
2015/problem_3/: Cargo.toml
2015/problem_3/src/: main.rs
2015/problem_4/: Cargo.toml
2015/problem_4/src/: main.rs
2015/problem_5/: Cargo.toml
2015/problem_5/src/: main.rs
2015/problem_6/: Cargo.toml
2015/problem_6/src/: main.rs
2015/problem_7/: Cargo.toml
2015/problem_7/src/: main.rs
2015/problem_8/: Cargo.toml
2015/problem_8/src/: main.rs
2015/problem_9/: Cargo.toml
2015/problem_9/src/: main.rs
2015/problem_9_1/: Cargo.toml
2015/problem_9_1/src/: main.rs
2015/src/utils/: file_reader.rs  permutations.rs
2015/utils/: Cargo.toml
2015/utils/src/: lib.rs
2023/: Cargo.toml  result.txt
2023/input/: problem5.txt
2023/src/utils/: mod.rs  permutations.rs
