[package]
name = "code_advent_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1"
utf8-read ="0.4.0"
regex = "1"
md5="0.7.0"
priority-queue="1.3.2"
pathfinding="3.0.12"
num = "0.4.1"
itertools = "0.12.0"

[lib]
name="utils"
path="src/utils/mod.rs"
